Entrega del trabajo

--- a/home.html
+++ b/home.html
@@ -34,16 +34,16 @@
         <figure class="figure">
             <div><img src="imagenes/supermercado.jpg" alt="foto dentro del supermercado"></div>
             <figcaption>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem dolor ne 
+                Interior del supermecado
             </figcaption>
         </figure>
         <figure class="figure">
             <div><img src="imagenes/logo2.png" class="logo2" alt="Logo del supermecado"></div>
-            <figcaption>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem </figcaption>
+            <figcaption>Logo del supermercado </figcaption>
         </figure>
         <figure class="figure">
             <div><img src="imagenes/supermercado2.jpeg" alt="foto de un carrito de supermercado"></div>
-            <figcaption>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </figcaption>
+            <figcaption>Carrito de supermecado </figcaption>
         </figure>
     </section>
     <section class="historia">
