Entrega del trabajo

--- a/home.html
+++ b/home.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
+
 <body>
     <header class="header">
         <nav class="navegacion">
             <div class="Logo">
-                <a href="home.html"><img  src="imagenes/Logo.png" alt="Logo del supermercado"></a>
+                <a href="home.html"><img src="imagenes/Logo.png" alt="Logo del supermercado"></a>
             </div>
             <div>
                 <h1>Supermercado El Nuevo Tablon</h1>
             </div>
-        
+
             <ul class="links">
                 <li>
                     <a href="home.html"><i class="fa-solid fa-house"></i></a>
@@ -30,34 +32,40 @@
             </ul>
         </nav>
     </header>
-    <section class="contenedor">
-        <figure class="figure">
-            <div><img src="imagenes/supermercado.jpg" alt="foto dentro del supermercado"></div>
-            <figcaption>
-                Interior del supermecado
-            </figcaption>
-        </figure>
-        <figure class="figure">
-            <div><img src="imagenes/logo2.png" class="logo2" alt="Logo del supermecado"></div>
-            <figcaption>Logo del supermercado </figcaption>
-        </figure>
-        <figure class="figure">
-            <div><img src="imagenes/supermercado2.jpeg" alt="foto de un carrito de supermercado"></div>
-            <figcaption>Carrito de supermecado </figcaption>
-        </figure>
-    </section>
-    <section class="historia">
-        <div class="nosotros">
-            <h3 class="subtitulo">Nuestra Historia:</h3>
-            <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi quo totam voluptates, sapiente quod sit voluptatibus! Fuga, maxime modi quo harum et aliquam dolor obcaecati accusamus delectus nisi a iure?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos error cupiditate dolor voluptatem harum recusandae est consequatur veniam quae blanditiis? Sed sapiente ullam perspiciatis reprehenderit minus possimus voluptas non iure?</p>
-        </div>
-        <div class="horarios">
+    <main>
+        <section class="contenedor">
+            <figure class="figure">
+                <div><img src="imagenes/supermercado.jpg" alt="foto dentro del supermercado"></div>
+                <figcaption>
+                    Interior del supermecado
+                </figcaption>
+            </figure>
+            <figure class="figure">
+                <div><img src="imagenes/logo2.png" class="logo2" alt="Logo del supermecado"></div>
+                <figcaption>Logo del supermercado </figcaption>
+            </figure>
+            <figure class="figure">
+                <div><img src="imagenes/supermercado2.jpeg" alt="foto de un carrito de supermercado"></div>
+                <figcaption>Carrito de supermecado </figcaption>
+            </figure>
+        </section>
+        <section class="historia">
+            <div class="nosotros">
+                <h3 class="subtitulo">Nuestra Historia:</h3>
+                <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi quo totam voluptates,
+                    sapiente quod sit voluptatibus! Fuga, maxime modi quo harum et aliquam dolor obcaecati accusamus
+                    delectus nisi a iure?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos error
+                    cupiditate dolor voluptatem harum recusandae est consequatur veniam quae blanditiis? Sed sapiente
+                    ullam perspiciatis reprehenderit minus possimus voluptas non iure?</p>
+            </div>
+            <div class="horarios">
 
-            <h3 class="hora">Horarios</h3>
-            <p class="tiempo">Lunes a sabado de 08:30 a 13:00hs</p>
-            <p class="tiempo">Lunes a sabado de 17:00 a 21:00hs</p>
-        </div>
-    </section>
+                <h3 class="hora">Horarios</h3>
+                <p class="tiempo">Lunes a sabado de 08:30 a 13:00hs</p>
+                <p class="tiempo">Lunes a sabado de 17:00 a 21:00hs</p>
+            </div>
+        </section>
+    </main>
     <footer class="footer">
         <div class="final">
             <div class="sociales">
@@ -76,9 +84,10 @@
                 </ul>
             </div>
             <div class="nombre">
-                <p class="creado">Creado por Alexis Urbina</p>       
+                <p class="creado">Creado por Alexis Urbina</p>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
