--- a/productos.html
+++ b/productos.html
@@ -13,12 +13,12 @@
     <header class="header">
         <nav class="navegacion">
             <div class="Logo">
-                <a href="home.html"><img  src="imagenes/Logo.png" alt="Logo del supermercado"></a>
+                <a href="home.html"><img src="imagenes/Logo.png" alt="Logo del supermercado"></a>
             </div>
             <div>
                 <h1>Supermercado El Nuevo Tablon</h1>
             </div>
-        
+
             <ul class="links">
                 <li>
                     <a href="home.html"><i class="fa-solid fa-house"></i></a>
@@ -32,14 +32,16 @@
             </ul>
         </nav>
     </header>
-    <section class="section">
-        <div class="contenedor">
-            <div class="card-product" id="card-product">
-                <ul id="lista" class="lista">
+    <main>
+        <section class="section">
+            <div class="contenedor">
+                <div class="card-product" id="card-product">
+                    <ul id="lista" class="lista">
 
-                </ul>
-        </div>
-    </section>
+                    </ul>
+                </div>
+        </section>
+    </main>
     <footer class="footer">
         <div class="final">
             <div class="sociales">
@@ -58,7 +60,7 @@
                 </ul>
             </div>
             <div class="nombre">
-                <p class="creado">Creado por Alexis Urbina</p>      
+                <p class="creado">Creado por Alexis Urbina</p>
             </div>
         </div>
     </footer>
