Entrega del trabajo

--- a/productos.html
+++ b/productos.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>El Nuevo Tablon - Productos</title>
     <link rel="stylesheet" href="css/productos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
+    <link rel="icon" type="image/png" href="imagenes/logo2.png">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
                 <a href="home.html"><img src="imagenes/Logo.png" alt="Logo del supermercado"></a>
             </div>
             <div>
-                <h1>Supermercado El Nuevo Tablon</h1>
+                <h1>Supermercado "EL NUEVO TABLON"</h1>
             </div>
 
             <ul class="links">
@@ -48,12 +49,12 @@
                 <p class="seguir">Seguinos</p>
                 <ul class="redes">
                     <li>
-                        <a class="facebook" href="http://facebook.com">
+                        <a class="facebook" href="http://facebook.com" target= _blank>
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
                     <li>
-                        <a class="instagram" href="http://instagram.com">
+                        <a class="instagram" href="http://instagram.com" target= _blank>
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
