--- a/contacto.html
+++ b/contacto.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>El Nuevo Tablon - Contacto</title>
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
+    <link rel="icon" type="image/png" href="imagenes/logo2.png">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
                 <a href="home.html"><img src="imagenes/Logo.png" alt="Logo del supermercado"></a>
             </div>
             <div>
-                <h1>Supermercado El Nuevo Tablon</h1>
+                <h1>Supermercado "EL NUEVO TABLON"</h1>
             </div>
 
             <ul class="links">
@@ -33,7 +34,7 @@
         </nav>
     </header>
     <main>
-        <form action="" class="formulario">
+        <form action="" class="formulario" id="formulario">
             <div>
                 <h2 class="titulo"> ¿Ténes una consulta?<i class="fa-regular fa-comment-dots"></i></h2>
             </div>
@@ -48,6 +49,7 @@
 
             <label for="user">Ingrese su consulta:</label>
             <textarea placeholder="Tu comentario aqui..." name="consulta" id="consulta" class="consulta"></textarea>
+
             <input type="submit" value="Enviar" id="btn" class="btn">
         </form>
         <section class="contenedor">
@@ -67,12 +69,12 @@
                 <p class="seguir">Seguinos</p>
                 <ul class="redes">
                     <li>
-                        <a class="facebook" href="http://facebook.com">
+                        <a class="facebook" href="http://facebook.com" target=_blank>
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
                     <li>
-                        <a class="instagram" href="http://instagram.com">
+                        <a class="instagram" href="http://instagram.com" target=_blank>
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
