--- a/contacto.html
+++ b/contacto.html
@@ -34,25 +34,27 @@
         </nav>
     </header>
     <main>
-        <form action="" class="formulario" id="formulario">
-            <div>
-                <h2 class="titulo"> ¿Ténes una consulta?<i class="fa-regular fa-comment-dots"></i></h2>
-            </div>
-            <label for="user">Nombre y Apellido:</label>
-            <input type="text" placeholder="Nombre y Apellido" name="nombre" id="nombre" class="nombre">
+        <div class="contenedor">
+            <form action="" class="formulario" id="formulario">
+                <div>
+                    <h2 class="titulo"> ¿Ténes una consulta?<i class="fa-regular fa-comment-dots"></i></h2>
+                </div>
+                <label for="user">Nombre y Apellido:</label>
+                <input type="text" placeholder="Nombre y Apellido" name="nombre" id="nombre" class="nombre">
 
-            <label for="email">Correo electrónico:</label>
-            <input type="email" placeholder="Tu correo electrónico" name="email" id="email" class="email">
+                <label for="email">Correo electrónico:</label>
+                <input type="email" placeholder="Tu correo electrónico" name="email" id="email" class="email">
 
-            <label for="user">Telefono:</label>
-            <input type="tel" placeholder="Telefono" name="telefono" id="telefono" min="0" class="telefono">
+                <label for="user">Telefono:</label>
+                <input type="tel" placeholder="Telefono" name="telefono" id="telefono" min="0" class="telefono">
 
-            <label for="user">Ingrese su consulta:</label>
-            <textarea placeholder="Tu comentario aqui..." name="consulta" id="consulta" class="consulta"></textarea>
+                <label for="user">Ingrese su consulta:</label>
+                <textarea placeholder="Tu comentario aqui..." name="consulta" id="consulta" class="consulta"></textarea>
 
-            <input type="submit" value="Enviar" id="btn" class="btn">
-        </form>
-        <section class="contenedor">
+                <input type="submit" value="Enviar" id="btn" class="btn">
+            </form>
+        </div>
+        <section class="section">
             </div class="segundo-contacto">
             <p>Sino contactanos por</p>
             <nav class="contacto">
