--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
     <main>
         <section class="contenedor">
             <figure class="figure">
-                <div><img src="imagenes/supermercado.jpg" alt="foto dentro del supermercado"></div>
+                <div><img src="imagenes/supermercado.jpg" alt="foto dentro del supermercado" class="interior-super"></div>
                 <figcaption>
                     Interior del supermecado
                 </figcaption>
@@ -59,11 +59,13 @@
                     cupiditate dolor voluptatem harum recusandae est consequatur veniam quae blanditiis? Sed sapiente
                     ullam perspiciatis reprehenderit minus possimus voluptas non iure?</p>
             </div>
-            <div class="horarios">
+            <div class="container">
+                <div class="horarios">
 
-                <h3 class="hora">Horarios</h3>
-                <p class="tiempo">Lunes a sabado de 08:30 a 13:00hs</p>
-                <p class="tiempo">Lunes a sabado de 17:00 a 21:00hs</p>
+                    <h3 class="hora">Horarios</h3>
+                    <p class="tiempo">Lunes a sabado de 08:30 a 13:00hs</p>
+                    <p class="tiempo">Lunes a sabado de 17:00 a 21:00hs</p>
+                </div>
             </div>
         </section>
     </main>
@@ -73,12 +75,12 @@
                 <p class="seguir">Seguinos</p>
                 <ul class="redes">
                     <li>
-                        <a class="facebook" href="http://facebook.com" target= _blank>
+                        <a class="facebook" href="http://facebook.com" target=_blank>
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
                     <li>
-                        <a class="instagram" href="http://instagram.com" target= _blank>
+                        <a class="instagram" href="http://instagram.com" target=_blank>
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
