--- a/contacto.html
+++ b/contacto.html
@@ -58,9 +58,9 @@
             </div class="segundo-contacto">
             <p>Sino contactanos por</p>
             <nav class="contacto">
-                <a class="whatsapp" href="http://whatsapp.com"><i class="fa-brands fa-whatsapp"></i></a>
-                <a class="face" href="http://facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-                <a class="insta" href="http://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                <a class="whatsapp" href="http://whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                <a class="face" href="http://facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                <a class="insta" href="http://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </nav>
             </div>
         </section>
