--- a/productos.html
+++ b/productos.html
@@ -36,7 +36,7 @@
     <main>
         <section class="section">
             <div class="contenedor">
-                <div class="card-product" id="card-product">
+                <div class="card-product">
                     <ul id="lista" class="lista">
 
                     </ul>
