--- a/home.html
+++ b/home.html
@@ -36,7 +36,8 @@
     <main>
         <section class="contenedor">
             <figure class="figure">
-                <div><img src="imagenes/supermercado.jpg" alt="foto dentro del supermercado" class="interior-super"></div>
+                <div><img src="imagenes/supermercado.jpg" alt="foto dentro del supermercado" class="interior-super">
+                </div>
                 <figcaption>
                     Interior del supermecado
                 </figcaption>
@@ -52,12 +53,19 @@
         </section>
         <section class="historia">
             <div class="nosotros">
-                <h3 class="subtitulo">Nuestra Historia:</h3>
-                <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi quo totam voluptates,
-                    sapiente quod sit voluptatibus! Fuga, maxime modi quo harum et aliquam dolor obcaecati accusamus
-                    delectus nisi a iure?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos error
-                    cupiditate dolor voluptatem harum recusandae est consequatur veniam quae blanditiis? Sed sapiente
-                    ullam perspiciatis reprehenderit minus possimus voluptas non iure?</p>
+                <div class="primer-parrafo">
+                    <h3 class="subtitulo">Nuestra Historia:</h3>
+                    <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi quo totam
+                        voluptates,
+                        sapiente quod sit voluptatibus! Fuga, maxime modi quo harum et aliquam dolor obcaecati accusamus
+                        delectus nisi a iure?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos error
+                        cupiditate dolor voluptatem harum recusandae est consequatur veniam quae blanditiis? Sed
+                        </p>
+                </div>
+                <div class="segundo-parrafo">
+                    <h3 class="subtitulo">¿A qué nos dedicamos?</h3>
+                    <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa expedita inventore voluptatibus hic nisi ipsam cumque perferendis non eum, excepturi sed a atque, voluptates exercitationem, itaque veritatis est fuga in.</p>
+                </div>
             </div>
             <div class="container">
                 <div class="horarios">
